# Copyright (C) 2016-2018 University of California, Irvine
#
# Authors:
# Zhihao Yao <z.yao@uci.edu>
# Zongheng Ma <zonghenm@uci.edu>
# Yingtong Liu <yingtong@uci.edu>
# Ardalan Amiri Sani <arrdalan@gmail.com>
#
# All rights reserved. Use of this source code is governed
# by a BSD-style license that can be found in the LICENSE file.
#
# Based on gpu/ipc/client/BUILD.gn,
#
# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ui.gni")

group("client") {
    public_deps = [
      ":itc_client_sources",
    ]
}

source_set("itc_client_sources") {
  sources = [
    "gpu_thread_host.cc",
    "gpu_thread_host.h",
  ]
  deps = [
    "//base",
    "//gpu/command_buffer/client:client_sources",
    "//gpu/command_buffer/common:common_sources",
    "//gpu/config:config_sources",
    "//gpu/ipc/common:ipc_common_sources",
    "//ipc",
    "//ui/base/",
    "//ui/events/ipc",
    "//ui/gfx/ipc",
    "//ui/gfx/ipc/geometry",
    "//ui/gl",
    "//url/ipc:url_ipc",
  ]
  if (use_ozone) {
    deps += [ "//ui/ozone" ]
  }
}
